--- a/Covid_Cases/Readme
+++ b/Covid_Cases/Readme
@@ -1,3 +1,3 @@
-### Shinyapp for state COVID Cases
+Shinyapp for state COVID Cases
 
-### App can be found at https://7cbiqh-theglucru.shinyapps.io/covid_cases/
+App can be found at https://7cbiqh-theglucru.shinyapps.io/covid_cases/
